@@ -2,10 +2,3 @@ project.depends.data=data
 project.depends.source=src
 project.depends.lib=phetcommon : piccolo-phet
 project.flavor.gravity-and-orbits.mainclass=edu.colorado.phet.gravityandorbits.GravityAndOrbitsApplication
-
-#Feasibility test for sim sharing
-#project.flavor.gravity-and-orbits-server.mainclass=edu.colorado.phet.simsharing.test1.SimSharingServer
-#project.flavor.gravity-and-orbits-teacher.mainclass=edu.colorado.phet.gravityandorbits.GravityAndOrbitsApplication
-#project.flavor.gravity-and-orbits-teacher.args=-teacher
-#project.flavor.gravity-and-orbits-student.mainclass=edu.colorado.phet.gravityandorbits.GravityAndOrbitsApplication
-#project.flavor.gravity-and-orbits-student.args=-student
