@@ -1,0 +1,3 @@
+teacher.name=Teacher
+student.name=Student
+server.name=Server
