@@ -1,8 +1,8 @@
 # Copyright 2002-2011, University of Colorado
 project.depends.data=data
 project.depends.source=src
-
-project.depends.lib=gravity-and-orbits : contrib/akka-1.0-RC3/dist/akka-actor-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-remote-1.0-RC3.jar : contrib/akka-1.0-RC3/scala-library.jar
+project.depends.lib= gravity-and-orbits : contrib/akka-1.0-RC3/deploy/akka-sample-fsm-1.0-RC3.jar : contrib/akka-1.0-RC3/deploy/akka-sample-remote-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-actor-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-http-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-remote-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-stm-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-typed-actor-1.0-RC3.jar : contrib/akka-1.0-RC3/lib_managed/compile/activation-1.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/aopalliance-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/asm-3.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/aspectwerkz-2.2.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/commons-codec-1.4.jar : contrib/akka-1.0-RC3/lib_managed/compile/commons-io-1.4.jar : contrib/akka-1.0-RC3/lib_managed/compile/commons-logging-1.1.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/configgy-2.0.2-nologgy.jar : contrib/akka-1.0-RC3/lib_managed/compile/core-1.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/dispatch-futures_2.8.0-0.7.4.jar : contrib/akka-1.0-RC3/lib_managed/compile/dispatch-futures_2.8.1-0.7.7.jar : contrib/akka-1.0-RC3/lib_managed/compile/dispatch-http_2.8.0-0.7.4.jar : contrib/akka-1.0-RC3/lib_managed/compile/dispatch-json_2.8.0-0.7.4.jar : contrib/akka-1.0-RC3/lib_managed/compile/guice-all-2.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/h2-lzf-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/hawtdispatch-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/hawtdispatch-scala-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/httpclient-4.0.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/httpcore-4.0.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/jackson-core-asl-1.4.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jackson-mapper-asl-1.4.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jaxb-api-2.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/jaxb-impl-2.1.12.jar : contrib/akka-1.0-RC3/lib_managed/compile/jersey-core-1.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jersey-json-1.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jersey-scala-1.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jersey-server-1.3.jar : contrib/akka-1.0-RC3/lib_managed/compile/jettison-1.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-continuation-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-http-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-io-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-security-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-server-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-servlet-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-util-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jetty-xml-7.1.6.v20100715.jar : contrib/akka-1.0-RC3/lib_managed/compile/jsr166x-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/jsr250-api-1.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/jsr311-api-1.1.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/logback-classic-0.9.24.jar : contrib/akka-1.0-RC3/lib_managed/compile/logback-core-0.9.24.jar : contrib/akka-1.0-RC3/lib_managed/compile/multiverse-alpha-0.6.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/netty-3.2.3.Final.jar : contrib/akka-1.0-RC3/lib_managed/compile/protobuf-java-2.3.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/sbinary-2.8.0-0.3.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/servlet-api-2.5.jar : contrib/akka-1.0-RC3/lib_managed/compile/sjson-0.8-2.8.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/slf4j-api-1.6.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/spde-core_2.8.1-0.3.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/stax-api-1.0-2.jar : contrib/akka-1.0-RC3/lib_managed/compile/stax-api-1.0.1.jar : contrib/akka-1.0-RC3/lib_managed/compile/uuid-3.2.jar : contrib/akka-1.0-RC3/scala-library.jar
+#project.depends.lib=gravity-and-orbits : contrib/akka-1.0-RC3/dist/akka-actor-1.0-RC3.jar : contrib/akka-1.0-RC3/dist/akka-remote-1.0-RC3.jar : contrib/akka-1.0-RC3/scala-library.jar : contrib/akka-1.0-RC3/lib_managed/compile/configgy-2.0.2-nologgy.jar : contrib/akka-1.0-RC3/lib_managed/compile/slf4j-api-1.6.0.jar : contrib/akka-1.0-RC3/lib_managed/compile/uuid-3.2.jar
 project.flavor.teacher.mainclass=edu.colorado.phet.simsharing.Teacher
 project.flavor.server.mainclass=edu.colorado.phet.simsharing.Server
 project.flavor.student.mainclass=edu.colorado.phet.simsharing.Student
